--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "3",
+    "bootstrap": "^3.4.1",
+    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
