--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^3.4.1",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
+    "mongodb": "^3.5.9",
+    "nodemon": "^2.0.4",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
