--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1"
+    "react-simple-timefield": "^1.3.2",
+    "reactstrap": "^8.5.1",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
