--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "react-player": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "semantic-ui-react": "^0.88.2"
     "react-simple-timefield": "^1.3.2",
     "reactstrap": "^8.5.1",
-    "save": "^2.4.0"
-
+    "save": "^2.4.0",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
