--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^3.4.1",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.5",
     "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "mongodb": "^3.5.9",
